--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,48 +1,26 @@
-name: "PYPI"
+version: 0.2
 
-on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: "Version of the release, e.g. 1.0.0"
-        required: true
+phases:
+  install:
+    runtime-versions:
+      python: 3.8
+    commands:
+      # Install dependencies needed for running tests
+      - python3 -m pip install -r requirements.txt
 
-jobs:
-  build:
-    name: "Build"
-    runs-on: ubuntu-latest
+  pre_build:
+    commands:
+      # Discover and run unit tests. For more information, see <https://docs.djangoproject.com/en/2.0/topics/testing/overview/>
+      - python3 manage.py test
 
-    steps:
-      - name: "Checkout code"
-        uses: actions/checkout@v2
-        with:
-          ref: 'v${{ github.event.inputs.version }}'
+      - aws cloudformation package --template template.yml --s3-bucket $S3_BUCKET --output-template-file template-export.yml
 
-      - name: "Set up Python"
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.6'
-
-      - name: "Set up Node"
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-
-      - name: "Install build dependencies"
-        run: |
-          sudo apt-get install --no-install-recommends --assume-yes gettext
-          pip install --upgrade --disable-pip-version-check pip
-          pip install --upgrade setuptools wheel
-          pip install --upgrade shuup
-
-      - name: "Build the wheel"
-        run: |
-          rm -rf build/
-          rm -rf dist/
-          python setup.py bdist_wheel
-
-      - name: "Upload the wheel to PYPI"
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+  post_build:
+    commands:
+      # Do not remove this statement. This command is required for AWS CodeStar projects.
+      # Update the AWS Partition, AWS Region, account ID and project ID in the project ARN on template-configuration.json file so AWS CloudFormation can tag project resources.
+      - sed -i.bak 's/\$PARTITION\$/'${PARTITION}'/g;s/\$AWS_REGION\$/'${AWS_REGION}'/g;s/\$ACCOUNT_ID\$/'${ACCOUNT_ID}'/g;s/\$PROJECT_ID\$/'${PROJECT_ID}'/g' template-configuration.json
+artifacts:
+  files:
+    - template-export.yml
+    - template-configuration.json
